force-app/main/default/objects/Path__c/Path__c.object-meta.xml
<CustomObject>
    <description>Master path repository that contains the various learning trails that are available</description>
    <label>Path</label>
    <nameField>
        <label>Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>