force-app/main/default/objects/Path__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Overview of this learning path</description>
    <inlineHelpText>Overview of this learning path</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>