force-app/main/default/objects/Path__c/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <description>The Discipline the path belongs to</description>
    <label>Discipline</label>
    <referenceTo>Discipline__c</referenceTo>
    <relationshipLabel>Paths</relationshipLabel>
    <relationshipName>Paths</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>