force-app/main/default/objects/Path__c/fields/Trainee_Path__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Path__c</fullName>
    <label>Trainee Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prerequisites</fullName>
            </value>
            <value>
                <fullName>Welcome</fullName>
            </value>
            <value>
                <fullName>Salesforce Guidance</fullName>
            </value>
            <value>
                <fullName>Certification Guidance</fullName>
            </value>
            <value>
                <fullName>Agile Guidance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>